<resources>
    <string name="app_name">sleepy-connect</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_event_title">Event Title</string>
    <string name="hint_capacity">Leave empty for no capacity</string>
    <string name="hint_description">Enter event description</string>
    <string name="hint_time_input">HH:MM (24 hour format)</string>

    <string name="label_reg_starts">Registration Start</string>
    <string name="label_reg_ends">Registration End</string>
    <string name="label_event_start">Event Start</string>
    <string name="label_event_end">Event End</string>
    <string name="label_geolocation">Geolocation</string>
    <string name="label_waitlist_capacity">Waitlist Capacity</string>
    <string name="label_host_rec_center">Host Rec Center</string>
    <string name="label_host_address">Location Address</string>
    <string name="label_event_capacity">Event Capacity</string>
    <string name="label_description">Event Description</string>
    <string name="label_save_changes">Save Changes</string>
    <string name="label_event_time_start">Start Time</string>
    <string name="label_event_time_end">End Time</string>
    <string name="label_event_manager_bottom_sheet">Event Management Options</string>
    <string name="label_edit_poster">Edit Poster</string>
    <string name="label_manage_entrants">Manage Entrants</string>

    <string name="label_waitlist">Waitlist</string>
    <string name="label_invited">Invited</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_enrolled">Enrolled</string>

    <string name="label_dropdown_waitlist">Waitlist ▾</string>
    <string name="label_dropdown_invited">Invited ▾</string>
    <string name="label_dropdown_cancelled">Cancelled ▾</string>
    <string name="label_dropdown_enrolled">Enrolled ▾</string>

    <string name="label_admin_title">Admin View</string>
    <string name="label_exit">Exit</string>
    <string name="label_delete">Delete</string>
    <string name="label_return">Return</string>
    <string name="label_remove_poster">Remove Poster</string>

    <string name="label_reg_period">Registration Period</string>

    <string name="label_dropdown_profiles">Profiles ▾</string>
    <string name="label_dropdown_events">Events ▾</string>
    <string name="label_dropdown_posters">Posters ▾</string>
    <string name="label_dropdown_notifications">Notifications ▾</string>

    <string name="label_profiles">Profiles</string>
    <string name="label_events">Events</string>
    <string name="label_posters">Posters</string>
    <string name="label_notifications">Notifications</string>

    <string name="label_username">Username</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone_num">Phone Number</string>

    <string name="error_create_event">Error: Highlighted fields must be filled</string>

    <string name="lottery_guidelines">Signing up for events through Sleepy works on a lottery system!
   Since we have so many people wanting to sign up for events, we like to give everyone an equal
   chance of getting in without waiting in front of your computer for sign up time or in a long
   line at the rec centre.\n\nAll event have a registration period which are the dates that people
   can join the waitlist. You will know if an event is open for registration when the event details
   have a Join Waitlist button at the bottom. When you click to join a waitlist, you will be prompted
   for your information. Once you confirm your information, you will be placed on the waitlist.\n\nOnce
   the registration window ends, a random group of people off the waitlist will be sent invites to
   enroll in the event. Upon this initial selection, you will be sent a notification on whether you
   were invited or not but do not worry! This is not your last chance.\n\nWhen notified that you have
   not been invited to enroll, you will be asked if you would like to stay on the waitlist. If you
   stay on the waitlist, you will be given the chance to still be invited in the case that someone
   else who was invited chooses to decline their invitation.\n\nIf you were invited to enroll in an
   event, you can either decline and not enroll or accept and enroll in the event. Upon enrollment
   you will be able to attend the event once it begins. We ask that all people invited accept or
   decline their invitations as soon as they can to give others a chance to enroll.\n\nGood luck!\n
    </string>
    <string name="qr_code_generator_label">QR Code Generator</string>
    <string name="qr_code_description_2">Don\'t worry, you can always get this code by editing your event and clicking the <b>\"Share your event\"</b> button. And even if you change the event details later, this code will still work!</string>
    <string name="qr_code_description">Screenshot and add this code to your event poster. Scanning the code in app will navigate to the event details page!</string>

</resources>