<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".entrantmanagement.EntrantManagerBottomSheet">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bs_entrant_manager_gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/width_gutter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bs_entrant_manager_gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/width_gutter" />

    <TextView
        android:id="@+id/bs_entrant_manager_tv_waitlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/light_text_border"
        android:fontFamily="@font/roboto_medium"
        android:padding="5dp"
        android:text="@string/label_waitlist"
        android:textColor="@color/text_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/bs_entrant_manager_gl_right"
        app:layout_constraintStart_toStartOf="@+id/bs_entrant_manager_gl_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bs_entrant_manager_tv_invited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/light_text_border"
        android:fontFamily="@font/roboto_medium"
        android:padding="5dp"
        android:text="@string/label_invited"
        android:textColor="@color/text_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/bs_entrant_manager_gl_right"
        app:layout_constraintStart_toStartOf="@+id/bs_entrant_manager_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/bs_entrant_manager_tv_waitlist" />

    <TextView
        android:id="@+id/bs_entrant_manager_tv_cancelled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/light_text_border"
        android:fontFamily="@font/roboto_medium"
        android:padding="5dp"
        android:text="@string/label_cancelled"
        android:textColor="@color/text_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/bs_entrant_manager_gl_right"
        app:layout_constraintStart_toStartOf="@+id/bs_entrant_manager_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/bs_entrant_manager_tv_invited" />

    <TextView
        android:id="@+id/bs_entrant_manager_tv_enrolled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/light_text_border"
        android:fontFamily="@font/roboto_medium"
        android:padding="5dp"
        android:text="@string/label_enrolled"
        android:textColor="@color/text_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/bs_entrant_manager_gl_right"
        app:layout_constraintStart_toStartOf="@+id/bs_entrant_manager_gl_left"
        app:layout_constraintTop_toBottomOf="@+id/bs_entrant_manager_tv_cancelled" />

</androidx.constraintlayout.widget.ConstraintLayout>